// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputField render correctly 1`] = `
<div
  className="control"
>
  <input
    className="input "
  />
</div>
`;

exports[`InputField render correctly 2`] = `
<div
  className="control"
>
  <input
    className="input is-danger"
  />
  <styled.p>
    it has error
  </styled.p>
</div>
`;

exports[`InputField render correctly 3`] = `
<div
  className="control"
>
  <input
    className="input "
    name="name"
    placeholder="holder"
    value="value"
  />
</div>
`;
